--- a/composer.json
+++ b/composer.json
@@ -9,23 +9,21 @@
         "php": ">=8.3.14",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.13",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^3.3",
+        "doctrine/dbal": "^3.9.3",
+        "doctrine/doctrine-bundle": "^2.13.1",
+        "doctrine/orm": "^3.3.1",
+        "egulias/email-validator": "^4.0.2",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.4.7",
         "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
         "symfony/mime": "7.2.*",
         "symfony/password-hasher": "7.2.*",
         "symfony/runtime": "7.2.*",
-        "symfony/security-bundle": "7.2.*",
         "symfony/security-csrf": "7.2.*",
-        "symfony/validator": "7.2.*",
         "symfony/yaml": "7.2.*"
     },
     "config": {
@@ -81,9 +79,15 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.0",
-        "fakerphp/faker": "^1.24",
+        "doctrine/doctrine-migrations-bundle": "^3.3.1",
+        "fakerphp/faker": "^1.24.1",
+        "symfony/http-foundation": "7.2.*",
         "symfony/maker-bundle": "^1.61",
+        "symfony/routing": "7.2.*",
+        "symfony/security-bundle": "7.2.*",
         "symfony/stopwatch": "7.2.*",
+        "symfony/twig-bundle": "7.2.*",
+        "symfony/validator": "7.2.*",
         "symfony/var-dumper": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
